SVCDE: Small addition

--- a/2020_21/SVCDE/notes/notes.tex
+++ b/2020_21/SVCDE/notes/notes.tex
@@ -941,6 +941,9 @@ Notation for higher derivatives:
     for any two paths $C_\alpha, C_\beta$ in $D$ that have the same start and
     end points.
 \end{definition}
+\begin{theorem}
+    Line integrals of conservative vector fields are independent of path.
+\end{theorem}
 \begin{definition}
     A \B{closed} curve is one for which the start point coincides with the end point.
 \end{definition}
