SVCDE: Added divergence

--- a/2020_21/SVCDE/notes/notes.tex
+++ b/2020_21/SVCDE/notes/notes.tex
@@ -1041,6 +1041,14 @@ Notation for higher derivatives:
         \nabla^2 \vec F = \nabla^2 P\ih + \nabla^2 Q\jh + \nabla^2 R\kh.
     \end{align*}
 \end{definition}
+\subsubsection{Divergencve}
+\begin{definition}
+    If $\vec F(x,y,z)=P(x,y,z)\ih + Q(x,y,z)\jh + R(x,y,z)\kh$ is a vector field on $\R^3$, then
+    the \B{divergence} of $\vec F$ is defined by the scalar function
+    \begin{align*}
+        \div \vec F = \frac{\partial P}{\partial x}+\frac{\partial Q}{\partial y} + \frac{\partial R}{\partial z}.
+    \end{align*}
+\end{definition}
 \subsubsection{Vector form of Green's Theorem}
 \begin{theorem}
     Suppose that the plane region $D$, its boundary cruve $C$, and the functions
