New vector style

--- a/2019_20/ILA/hand-in-1/hand-in.tex
+++ b/2019_20/ILA/hand-in-1/hand-in.tex
@@ -2,6 +2,8 @@
 \usepackage[a4paper]{geometry}
 \usepackage{babel}
 \usepackage{amsmath}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \usepackage{amssymb}
 \title{ILA: H1 (Workshop 08)}
 \author{Franz Miltz (UNN: s1971811)}
