--- a/2019_20/ILA/hand-in-8/hand-in.tex
+++ b/2019_20/ILA/hand-in-8/hand-in.tex
@@ -3,6 +3,8 @@
 \usepackage[english]{babel}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \title{ILA: H8 (Workshop 08)}
 \author{Franz Miltz (UNN: s1971811)}
 \date{November 19, 2019}
