--- a/2019_20/ILA/notes/notes.tex
+++ b/2019_20/ILA/notes/notes.tex
@@ -64,6 +64,8 @@
 \DeclareMathOperator{\cl}{cl}
 \newcommand*\lneg[1]{\overline{#1}}
 \newcommand*\B[1]{\textbf{#1}}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \begin{document}
 \title{Introduction to Linear Algebra (SEM1)}
 \author{Franz Miltz}
