--- a/2020_21/SVCDE/H1/homework.tex
+++ b/2020_21/SVCDE/H1/homework.tex
@@ -32,7 +32,8 @@
 \newcommand{\jh}{\widehat j}
 \newcommand{\kh}{\widehat k}
 \newcommand{\K}{\kappa}
-\newcommand{\dv}[1]{\vec #1\, '}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \renewcommand{\d}[1]{#1'}
 \begin{document}
 \date{27th September 2020}
