--- a/2019_20/ILA/hand-in-3/hand-in.tex
+++ b/2019_20/ILA/hand-in-3/hand-in.tex
@@ -4,6 +4,8 @@
 \usepackage{babel}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \title{ILA: H3 (Workshop 08)}
 \author{Franz Miltz (UNN: S1971811)}
 \date{October 15, 2019}
