--- a/2019_20/ILA/hand-in-4/hand-in.tex
+++ b/2019_20/ILA/hand-in-4/hand-in.tex
@@ -3,6 +3,8 @@
 \usepackage{babel}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \title{ILA: H4 (Workshop 08)}
 \author{Franz Miltz (UNN: s1971811)}
 \date{October 22, 2019}
