--- a/2020_21/SVCDE/H3/homework.tex
+++ b/2020_21/SVCDE/H3/homework.tex
@@ -33,7 +33,8 @@
 \newcommand{\jh}{\widehat j}
 \newcommand{\kh}{\widehat k}
 \newcommand{\K}{\mathcal{K}}
-\newcommand{\dv}[1]{\vec #1\, '}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \renewcommand{\d}[1]{#1'}
 \newenvironment{itpars}{\par\itshape}{\par}
 \newenvironment{itquote}{\begin{quote}\itshape}{\end{quote}\ignorespacesafterend}
