--- a/2020_21/SVCDE/H6/homework.tex
+++ b/2020_21/SVCDE/H6/homework.tex
@@ -35,7 +35,8 @@
 \newcommand{\jh}{\widehat j}
 \newcommand{\kh}{\widehat k}
 \newcommand{\K}{\mathcal{K}}
-\newcommand{\dv}[1]{\vec #1\, '}
+\renewcommand{\vec}{\underline}
+\newcommand{\dv}[1]{\vec #1'}
 \renewcommand{\d}[1]{#1'}
 \renewcommand{\t}{\theta}
 \newenvironment{itpars}{\par\itshape}{\par}
