INF2-IADS minor theorem

--- a/2020_21/INF2-IADS/notes/notes.tex
+++ b/2020_21/INF2-IADS/notes/notes.tex
@@ -113,6 +113,11 @@
 \begin{theorem}
 	Let $f,g:\N\to\R_{\geq 0}$. Then $f\in\Theta(g)$ if, and only if, $g\in\Theta(f)$.
 \end{theorem}
+\begin{theorem}
+	\begin{align*}
+		\lg n! = \Theta(n \lg n).
+	\end{align*}
+\end{theorem}
 \subsection{Recurrence relations}
 \begin{theorem}[The Master Theorem]
 	Assume a recurrence relation $T$ has the form
