PRB: H3 during workshop

--- a/2020_21/PRB/H3/week7/homework.tex
+++ b/2020_21/PRB/H3/week7/homework.tex
@@ -89,7 +89,7 @@ desired. Let us now consider the position at some point in time $t$:
 \end{align*}
 We can move the constants out of the sum to find
 \begin{align*}
-  X_n = 2\sum_{i=1}W_i - n.
+  X_n = 2\sum_{i=1}^n W_i - n.
 \end{align*}
 Since a binomial random variable with $n$ trials is, by definition, the 
 sum of $n$ Bernoulli variables, we can define $B_n\sim\Binom(n,1/2)$
