PRB: H3 and fixed naming scheme

--- a/2020_21/PRB/H0/homework.tex
+++ b/2020_21/PRB/H0/homework.tex
@@ -9,8 +9,6 @@
 \usepackage{changepage}
 \geometry{tmargin=2cm, bmargin=3cm}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\title{PRB: Workshop 1 Hand-in}
-\author{Franz Miltz (UNN: S1971811)}
 \newcommand*\lneg[1]{\overline{#1}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
@@ -36,6 +34,8 @@
 \newcommand{\dv}[1]{\vec #1\, '}
 \renewcommand{\d}[1]{#1'}
 \begin{document}
+\title{Probability: Week 2 Hand-in}
+\author{Franz Miltz (UNN: S1971811)}
 \date{29th September 2020}
 \maketitle
 \noindent Let the experiment $E$ be to pick a random number in the sample space
