--- a/2020_21/PRB/H1/week2/homework.tex
+++ b/2020_21/PRB/H1/week2/homework.tex
@@ -9,8 +9,6 @@
 \usepackage{changepage}
 \geometry{tmargin=2cm, bmargin=3cm}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\title{PRB: Week 2 Solutions}
-\author{Franz Miltz (UNN: S1971811)}
 \newcommand*\lneg[1]{\overline{#1}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
@@ -37,6 +35,8 @@
 \newcommand{\dv}[1]{\vec #1\, '}
 \renewcommand{\d}[1]{#1'}
 \begin{document}
+\title{Probability: Week 2 Solutions}
+\author{Franz Miltz (UNN: S1971811)}
 \date{6th October 2020}
 \maketitle
 \section*{P 2.1}
