--- a/2020_21/PRB/H2/hand-in/homework.tex
+++ b/2020_21/PRB/H2/hand-in/homework.tex
@@ -42,7 +42,7 @@
 \newcommand{\dv}[1]{\vec #1\, '}
 \renewcommand{\d}[1]{#1'}
 \begin{document}
-\title{PRB: Week 6 Hand-in}
+\title{Probability: Week 6 Hand-in}
 \author{Franz Miltz (UNN: S1971811)}
 \date{27th October, 2020}
 \maketitle
