--- a/2020_21/PRB/H2/week4/homework.tex
+++ b/2020_21/PRB/H2/week4/homework.tex
@@ -41,7 +41,7 @@
 \DeclareMathOperator{\Exp}{Exponential}
 \DeclareMathOperator{\GD}{Gamma}
 \begin{document}
-\title{PRB: Week 4 Solutions}
+\title{Probability: Week 4 Solutions}
 \author{Franz Miltz (UNN: S1971811)}
 \date{13th October, 2020}
 \maketitle
