--- a/2020_21/PRB/H3/week6/homework.tex
+++ b/2020_21/PRB/H3/week6/homework.tex
@@ -42,7 +42,7 @@
 \DeclareMathOperator{\GD}{Gamma}
 \DeclareMathOperator{\Poiss}{Poiss}
 \begin{document}
-\title{PRB: Week 6 Solutions}
+\title{Probability: Week 6 Solutions}
 \author{Franz Miltz (UNN: S1971811)}
 \date{10 November, 2020}
 \maketitle
